[package]
name = "twlu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.7"
data-encoding = "2.4.0"
serde = { version = "1.0.190", features = ["derive"] }
ureq = { version = "2.8.0", features = ["json"] }
