[package]
name = "twlu"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Small CLI tool to query the Twilio Lookup API V2 for a phone number"
repository = "https://github.com/petergs/twlu"
readme = "README.md"
keywords = ["twilio", "cnam"]
categories = ["command-line-utilities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.7"
data-encoding = "2.4.0"
serde = { version = "1.0.190", features = ["derive"] }
ureq = { version = "2.8.0", features = ["json"] }
